# derive_builder

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: main.rs  test_struct_with_named_fields.rs
