[package]
name = "derive_builder"
version = "0.1.0"
authors = ["Crispin Koech <crispinkoech.ck@gmail.com>"]
description = "A macro that generates boilerplate code for the builder pattern in rust"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
